Fix dropdowns vertical scrollbar

--- a/panel/src/scss/components/_dropdowns.scss
+++ b/panel/src/scss/components/_dropdowns.scss
@@ -33,7 +33,7 @@
     margin-top: 3px;
     background-color: var(--color-base-900);
     box-shadow: $box-shadow-md;
-    overflow-y: scroll;
+    overflow-y: auto;
 }
 
 .dropdown-list {
